# undecover-mode

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-24-windows-polish.md
scripts/: install-user.sh
src/parrot_undercover/: __init__.py  __main__.py  cli.py  core.py
src/parrot_undercover/assets/: windows10-dark.colors  windows10-light.colors
src/parrot_undercover/presets/: win10-dark.json  win10.json
src/parrot_undercover/templates/look-and-feel/: metadata.json
src/parrot_undercover/templates/look-and-feel/contents/: defaults
src/parrot_undercover/templates/look-and-feel/contents/layouts/: org.kde.plasma.desktop-layout.js
src/parrot_undercover/templates/look-and-feel/contents/splash/: Splash.qml
tests/: conftest.py  test_cli.py  test_core.py  test_desktop_entry.py  test_preset.py
